// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Statistic rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="g-statistic g-statistic-rtl css-var-root"
>
  <div
    class="g-statistic-content"
  >
    <span
      class="g-statistic-content-value"
    >
      <span
        class="g-statistic-content-value-int"
      >
        0
      </span>
    </span>
  </div>
</div>
`;

exports[`Statistic support negative number 1`] = `
<div
  class="g-statistic css-var-root"
>
  <div
    class="g-statistic-header"
  >
    <div
      class="g-statistic-title"
    >
      Account Balance (CNY)
    </div>
  </div>
  <div
    class="g-statistic-content"
  >
    <span
      class="g-statistic-content-value"
    >
      <span
        class="g-statistic-content-value-int"
      >
        -112,893
      </span>
      <span
        class="g-statistic-content-value-decimal"
      >
        .12
      </span>
    </span>
  </div>
</div>
`;
